# final-year-project

./: README.md  aes5.cpp  coefficient.m  entropy.py  histogram.py  histogram2.PY  signal_to_noise.py
0803AES/: CMakeLists.txt  newAES3.cpp
2703LFSR/: CMakeLists.txt  LFSR1.cpp
aes_non_reduced/: README.md  main_windows.py
metrics/: coefficient.m  entropy.py  histogram.py  psnr.py
